pull in current config format and update parsing
